--- a/index.html
+++ b/index.html
@@ -50,21 +50,22 @@
             <div class="text-right">
                 <a class="btn btn-primary button" href="products.html">View more products  -></a>
             </div>
-            <div class="Subscribe">
+            <div class="subscribe mx-auto col-md-8">
 			<h4>Subscribe</h4>
 			<h5>Subscribe to our newsletter and get 20% off on your next purchase.</h5>
 				<form class="pb-3 d-flex flex-column">
 				  <fieldset class="form-group">
 					<input  type="email" class="form-control form-control-lg" placeholder="Enter email"	/>
 				  </fieldset>
-					<buttom	type="submit"	class="btn btn-warning btn-lg mt-2 font-weight-bold">
+					<button	type="submit"	class="btn btn-warning btn-lg mt-2 font-weight-bold">
 						Subscribe
 					</button>
 				</form>
 		</div>
         </section>
-    </div>    
-   
+    </div>
+     
+    
     <footer></footer>
     <script src="https://kit.fontawesome.com/ee54249b54.js" crossorigin="anonymous"></script>
     <script src="js/index.js" type="module"></script>
