fixing my code in adding product

--- a/cart.html
+++ b/cart.html
@@ -45,7 +45,10 @@
           </div>
           <div class="col-12 col-md-4 container__products__cart__price">
             <h5>Total price: <span></span></h5>
-            <!-- <h5>Tax : $<span></span></h5> -->
+
+             <div class="col-12 col-md-4 container__products__cart__tax">
+            <h6>Tax 12% : <span></span></h6>
+            
             <p class="btn btn-outline-dark" id="clearCart">
               Clear cart<i class="far fa-trash-alt"></i>
             </p>
