--- a/edit.html
+++ b/edit.html
@@ -92,16 +92,16 @@
               <div class="form-group">
                 <label for="uploadFile">Image:</label>
                 <div class="custom-file mb-3">
-                  <input type="text" name="image">
+                  <input type="file" name="image">
                   
-                  <input type="text" name="image_url" class="custom-file-input form-control" id="uploadFile" />
+                  <input type="file" name="image" class="custom-file-input form-control" id="uploadFile" />
                   <label class="custom-file-label" for="uploadFile">Choose image...</label >
                 </div>
                 <div class="w-100 image-warning">
                   File needs to be under 200KB
                 </div>
                 <div class="w-100 upload__background">
-                  <img id="uploadImage" src="" alt="Image preview" />
+                  <img id="uploadImage" src="/img/noimagefound.jpg" alt="Image preview" />
                 </div>
               </div>
             </div>
