--- a/addnew.html
+++ b/addnew.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand" href="index.html"><img src="img/Berg´s_.svg" alt="Berg-brandedCollections">  <span class="Nav_brand__Title">Brand</span></a>
+                <a class="navbar-brand" href="index.html"><img src="img/Berg´s_Favi-icon logo.svg" alt="Berg-brandedCollections">  <span class="Nav_brand__Title">Brand</span></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -102,13 +102,13 @@
               </div>
             </div>
           </div>
-          <div class="form-group w-100">
+          <!-- <div class="form-group w-100">
           <div class="input-group mb-3 form-group">
-              <span class="input-group-text" id="inputGroup-sizing-default uploadFile">URL</span>
+              <label class="input-group-text" id="inputGroup-sizing-default uploadFile">URL</label>
               <input type="url" id="image" name="image" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
           </div> 
           </div>
-          
+           -->
           <div id="messageContainer"></div>
           <button type="submit" class="btn btn-primary" id="submit">
             Add product
