--- a/cart.html
+++ b/cart.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
      <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand" href="index.html"><img src="img/Berg´s_.svg" alt="Berg-brandedCollections">  <span class="Nav_brand__Title">Brand</span></a>
+                <a class="navbar-brand" href="index.html"><img src="img/Berg´s_Favi-icon logo.svg" alt="Berg-brandedCollections">  <span class="Nav_brand__Title">Brand</span></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -53,7 +53,8 @@
               Clear cart<i class="far fa-trash-alt"></i>
             </p>
           </div>
-      </section>
+           
+        </section>
    
     
     <footer></footer>
