--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><img src="img/Berg´s_.svg" alt="nature soaps"/> <strong>BRAND</strong></a>
+          <a class="navbar-brand" href="index.html"><img src="img/Berg´s_Favi-icon logo.svg" alt="nature soaps"/> <strong>BRAND</strong></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse"  data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" >
             <span class="navbar-toggler-icon"></span>
           </button>
