--- a/product.html
+++ b/product.html
@@ -16,7 +16,7 @@
     <div id="logoutModal"></div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand" href="index.html"><img src="img/Berg´s_.svg" alt="Berg-brandedCollections">  <span class="">Brand</span></a>
+                <a class="navbar-brand" href="index.html"><img src="img/Berg´s_Favi-icon logo.svg" alt="Berg-brandedCollections">  <span class="">Brand</span></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                    <span class="navbar-toggler-icon"></span>
                 </button>
