putting padding and fixing sizes of fonts

--- a/cart.html
+++ b/cart.html
@@ -36,7 +36,7 @@
           </ol>
         </nav>
       </div>
-      <section class="container">
+      <section class="container bodyChart_background_color">
           <h1>Shopping Cart</h1>
 
         <div class="row container__products">
