--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="header__background">
                 <div class="banner__content wrapper">
                     <h1>Make your Own Collections  </h1>
-                    <p>It's time to treat yourself or Collect your hot stuff.</p>
+                    <p >It's time to treat yourself and Collect your hot stuff.</p>
                     <a class="btn btn-primary button" href="products.html">Shop Now</a>
                 </div>
                 </div>
